# patchwork

./: .clang-format  README.md  meson.build  org.nidi.patchwork.json
data/: meson.build  org.nidi.patchwork.appdata.xml.in  org.nidi.patchwork.desktop.in  org.nidi.patchwork.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  pw-application.c  pw-application.h  pw-canvas.c  pw-canvas.h  pw-dummy.c  pw-dummy.h  pw-enums.h  pw-misc.c  pw-misc.h  pw-node.c  pw-node.h  pw-pad.c  pw-pad.h  pw-pipewire.c  pw-pipewire.h  pw-view-controller.c  pw-view-controller.h  pw-window.c  pw-window.h  pw-zoom-entry.c  pw-zoom-entry.h  pw.gresource.xml
src/res/css/: colors-dark.css  colors-light.css  main.css  pw-canvas.css  pw-node.css  pw-pad.css
src/res/ui/: pw-canvas.ui  pw-node.ui  pw-window.ui  pw-zoom-entry.ui
